--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,18 @@ img {
 .nav-links-item {
   position: relative;
 }
-.nav-links-item .link::after {
+.nav-links-item .current::after {
+  content: "";
+position: absolute;
+left: 0;
+bottom: 0;
+display: block;
+width: 100%;
+height: 4px;
+border-radius: 2px;
+background-color: var(--accent-color);
+}
+/* .nav-links-item .link::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -100,7 +111,8 @@ height: 4px;
 
 background: #2196F3;
 border-radius: 2px;
-}
+} */
+
 .nav-links a {
   text-decoration: none;
 }
@@ -217,7 +229,7 @@ border-radius: 2px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: rgb(8, 8, 8);
+  color: var(--sekendary-background-color)
   /* текст будет белый */
 }
 /* .around-hero-button {
@@ -547,6 +559,8 @@ color: var(--primary-background-color);
 }
 
 .customers-link {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   display: flex;
   justify-content: center;
@@ -564,7 +578,10 @@ color: var(--primary-background-color);
 border-color: var(--accent-color);
 fill: var(--accent-color);
 }
-
+.customers-brend {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .customers-brend:hover,
 .customers-brend:focus {
   color: var(--accent-color);
